--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-placeholder": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
