--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-html-parser": "^2.0.2",
     "react-placeholder": "^4.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
